alignment issue fixed

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@
 .alert {
   height: 2rem;
   text-align: center;
-  margin-bottom: 1rem;
+  margin: 0 auto 1rem;
+  width: 36rem;
 }
 
 .alert-danger {
